--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p>an emerging global <br>cannabis company</p>
 			</div>
 			<p class="coming-soon capital">
-				website<br>coming very soon
+				website<br>coming soon
 			</p>
 			<p class="corporate">
 				<img src="images/company_icon.png" alt="" width="43" height="50">Corporate Presentation
